--- a/ConheçaoProjeto.html
+++ b/ConheçaoProjeto.html
@@ -198,8 +198,11 @@
     </div>
 
     <div class="footer-buttons">
+    
+    <a href="https://drive.google.com/drive/folders/1gJoxnNYOA0Ppvgu-h1KIxwHVRqTJkvbS?usp=sharing" target="_blank" class="btn">📁 Códigos do projeto</a>
+    <a href="https://drive.google.com/drive/folders/1YZvqh4FdZ9d0WK9e5N5plAiceq2UrOTh?usp=drive_link" target="_blank" class="btn">🖼️ Imagens</a>
       <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUvYFF8wCk-Ag-mEkCu5pNaikK3ltHAuFx_-eguoaKgy2IRSwwL6wGze8ZOdMs_Q-14wSIRDUFvsRy/pubhtml?gid=0&single=true" target="_blank" class="btn">📊 Ver Planilha</a>
-      <a href="https://drive.google.com/drive/folders/1gJoxnNYOA0Ppvgu-h1KIxwHVRqTJkvbS?usp=sharing" target="_blank" class="btn">📁 Acessar Projeto</a>
+
     </div>
   </div>
 </body>
