--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 </head>
 <body>
   <div class="button-container">
-    <a href="ConheçaoProjeto.html" target="_blank" class="btn">🛠️ Conheça o projeto</a>   
+    <a href="ConheçaoProjeto.html" target="_blank" class="btn">🛠️ Conheça o projeto</a> 
+    <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUvYFF8wCk-Ag-mEkCu5pNaikK3ltHAuFx_-eguoaKgy2IRSwwL6wGze8ZOdMs_Q-14wSIRDUFvsRy/pubhtml?gid=0&single=true" target="_blank" class="btn">📚 Consulte o Acervo</a>
   </div>
 </body>
 </html>
