--- a/trabalheaqui.html
+++ b/trabalheaqui.html
@@ -47,7 +47,7 @@
     }
 
     .section {
-      margin: 30px 0;
+      margin: 40px 0;
     }
 
     .section h2 {
@@ -107,23 +107,23 @@
     <h1>🛠️ Trabalhe Aqui</h1>
 
     <div class="section">
-      <h2>📸 Salve a imagem da capa</h2>
-      <p>Nomeie a imagem como <strong>20.1.CAPA</strong> e a contracapa como <strong>20.1.CONTRACAPA</strong>. Em seguida, envie para a pasta do projeto.</p>
-      <input type="file" accept="image/*">
+      <h2>📸 Etapa 1: Salve a imagem da capa</h2>
+      <p>Nomeie a imagem como <strong>20.1.CAPA</strong> e a contracapa como <strong>20.1.CONTRACAPA</strong>. Em seguida, envie para a pasta abaixo:</p>
+      <a href="https://drive.google.com/drive/folders/1YZvqh4FdZ9d0WK9e5N5plAiceq2UrOTh?usp=drive_link" target="_blank" class="btn">🖼️ Pasta de Imagens</a>
     </div>
 
     <div class="section">
-      <h2>🧠 Execute o Google Colab</h2>
-      <p>Clique na imagem abaixo para abrir o notebook que processa as imagens via OCR.</p>
+      <h2>🧠 Etapa 2: Execute o Google Colab</h2>
+      <p>Clique na imagem abaixo para abrir o notebook que processa as imagens via OCR e envia os dados para a planilha.</p>
       <a href="https://colab.research.google.com/drive/1TU8UcbrldH7mAEclHqyfCGcP5aYmjCK2?usp=sharing" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Google_Colaboratory_logo.svg/512px-Google_Colaboratory_logo.svg.png" alt="Google Colab" class="colab-img">
       </a>
     </div>
 
     <div class="section">
-      <h2>📊 Veja os resultados</h2>
-      <p>Após a execução, os dados extraídos estarão organizados na planilha abaixo:</p>
-      <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUvYFF8wCk-Ag-mEkCu5pNaikK3ltHAuFx_-eguoaKgy2IRSwwL6wGze8ZOdMs_Q-14wSIRDUFvsRy/pubhtml?gid=0&single=true" target="_blank" class="btn">📄 Acessar Planilha</a>
+      <h2>📊 Etapa 3: Veja os resultados</h2>
+      <p>Após a execução do Colab, os dados extraídos estarão organizados na planilha abaixo:</p>
+      <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUvYFF8wCk-Ag-mEkCu5pNaikK3ltHAuFx_-eguoaKgy2IRSwwL6wGze8ZOdMs_Q-14wSIRDUFvsRy/pubhtml?gid=0&single=true" target="_blank" class="btn">📄 Ver Planilha</a>
     </div>
   </div>
 </body>
