--- a/trabalheaqui.html
+++ b/trabalheaqui.html
@@ -32,12 +32,12 @@
       max-width: 1000px;
       margin: auto;
       padding: 50px 20px;
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: rgba(0, 0, 0, 0.85); /* Mais escuro e opaco */
       border-radius: 20px;
       box-shadow: 0 0 30px rgba(0,0,0,0.5);
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(20px); /* Vidro mais fosco */
       text-align: center;
-    }
+}
 
     h1 {
       font-size: 3rem;
