--- a/ConheçaoProjeto.html
+++ b/ConheçaoProjeto.html
@@ -16,7 +16,6 @@
       position: relative;
       overflow-x: hidden;
     }
-
     body::before {
       content: "";
       position: absolute;
@@ -33,7 +32,7 @@
       max-width: 1100px;
       margin: auto;
       padding: 60px 30px;
-      background-color: rgba(0, 0, 0, 0.85);
+      background-color: rgba(0, 0, 0, 0.75);
       border-radius: 25px;
       box-shadow: 0 0 40px rgba(0,0,0,0.6);
       backdrop-filter: blur(20px);
@@ -127,7 +126,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>📖 Como Funciona Nosso Aplicativo</h1>
+    <h1>📖 Entenda o funcionamento.. </h1>
 
     <div class="timeline">
       <div class="step">
