--- a/ConheçaoProjeto.html
+++ b/ConheçaoProjeto.html
@@ -138,7 +138,7 @@
       </div>
 
       <div class="step">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Google_Colaboratory_logo.svg/512px-Google_Colaboratory_logo.svg.png" alt="Google Colab">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Google_Colaboratory_SVG_Logo.svg" alt="Google Colab">
         <div class="step-content">
           <h2>2. Processamento via Colab</h2>
           <p>O script no <a href="https://colab.research.google.com/drive/1TU8UcbrldH7mAEclHqyfCGcP5aYmjCK2?usp=sharing" target="_blank" style="color:#9cf;">Google Colab</a> acessa a imagem, aplica OCR e extrai os dados automaticamente.</p>
@@ -146,7 +146,7 @@
       </div>
 
       <div class="step">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Google_Sheets_logo.svg" alt="Google Sheets">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Google_Sheets_2020_Logo.svg" alt="Google Sheets">
         <div class="step-content">
           <h2>3. Visualização dos Dados</h2>
           <p>Os dados extraídos são organizados em uma planilha acessível <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUvYFF8wCk-Ag-mEkCu5pNaikK3ltHAuFx_-eguoaKgy2IRSwwL6wGze8ZOdMs_Q-14wSIRDUFvsRy/pubhtml?gid=0&single=true" target="_blank" style="color:#9cf;">aqui</a>.</p>
