--- a/ConheçaoProjeto.html
+++ b/ConheçaoProjeto.html
@@ -138,7 +138,7 @@
       </div>
 
       <div class="step">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Google_Colaboratory_SVG_Logo.svg" alt="Google Colab">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Google_Colab_pic.png" alt="Google Colab">
         <div class="step-content">
           <h2>2. Processamento via Colab</h2>
           <p>O script no <a href="https://colab.research.google.com/drive/1TU8UcbrldH7mAEclHqyfCGcP5aYmjCK2?usp=sharing" target="_blank" style="color:#9cf;">Google Colab</a> acessa a imagem, aplica OCR e extrai os dados automaticamente.</p>
