--- a/ConheçaoProjeto.html
+++ b/ConheçaoProjeto.html
@@ -133,7 +133,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/DomCasmurroMachadodeAssis.jpg" alt="Capa do livro">
         <div class="step-content">
           <h2>1. Captura da Imagem</h2>
-          <p>O usuário fotografa a capa do livro e salva na <a href="https://drive.google.com/drive/folders/1YZvqh4FdZ9d0WK9e5N5plAiceq2UrOTh?usp=drive_link" target="_blank" style="color:#9cf;">pasta de imagens</a> com nome como <strong>20.1.CAPA</strong>.</p>
+          <p>O usuário pode printar ou fotografa a capa e/ou a contra capa do livro e salva na <a href="https://drive.google.com/drive/folders/1YZvqh4FdZ9d0WK9e5N5plAiceq2UrOTh?usp=drive_link" target="_blank" style="color:#9cf;">pasta de imagens</a> ordenando e nomeando como <strong>1.1.CAPA</strong> e se houver complemento 1.1.CONTRACAPA</p>
         </div>
       </div>
 
