--- a/trabalheaqui.html
+++ b/trabalheaqui.html
@@ -32,10 +32,10 @@
       max-width: 1000px;
       margin: auto;
       padding: 50px 20px;
-      background-color: rgba(0, 0, 0, 0.85); /* Mais escuro e opaco */
+      background-color: rgba(0, 0, 0, 0.75); /* Mais escuro e opaco */
       border-radius: 20px;
       box-shadow: 0 0 30px rgba(0,0,0,0.5);
-      backdrop-filter: blur(20px); /* Vidro mais fosco */
+      backdrop-filter: blur(10px); /* Vidro mais fosco */
       text-align: center;
 }
 
@@ -116,7 +116,7 @@
       <h2>🧠 Etapa 2: Execute o Google Colab</h2>
       <p>Clique na imagem abaixo para abrir o notebook que processa as imagens via OCR e envia os dados para a planilha.</p>
       <a href="https://colab.research.google.com/drive/1TU8UcbrldH7mAEclHqyfCGcP5aYmjCK2?usp=sharing" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Google_Colaboratory_logo.svg/512px-Google_Colaboratory_logo.svg.png" alt="Google Colab" class="colab-img">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Google_Colab_pic.png/1024px-Google_Colab_pic.png" alt="Google Colab" class="colab-img">
       </a>
     </div>
 
