--- a/trabalheaqui.html
+++ b/trabalheaqui.html
@@ -129,7 +129,7 @@
    <h2>Etapa 4: Salve as imagens</h2> 
    <p>Clique na figura abaixo para salva as imagens na pasta do Google drive que serão enviadas para o processamento </p>
     <a href="https://drive.google.com/drive/folders/1YZvqh4FdZ9d0WK9e5N5plAiceq2UrOTh?usp=drive_link" target="blank"> 
-      <img scr="https://upload.wikimedia.org/wikipedia/commons/f/fb/Google_Drive_-_New_Logo.png" alt="Google drive" class="colab-img">
+      <img scr="https://upload.wikimedia.org/wikipedia/commons/f/fb/Google_Drive_-_New_Logo.png?20201009090630" alt="Google drive" class="colab-img">
        </a>
     </div>
     
