--- a/trabalheaqui.html
+++ b/trabalheaqui.html
@@ -101,13 +101,19 @@
     .colab-img:hover {
       transform: scale(1.1);
 
-      }
-
-    @keyframes fadeIn {
-    from { opacity: 0; transform: scale(0.5); }
-    to { opacity: 1; transform: scale(1); }
     }
-    
+
+    .folder-img {
+    width: 120px;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    transition: transform 0.3s ease;
+    }
+
+    .folder-img:hover {
+    transform: scale(1.1);
+    }
+
   </style>
 </head>
 <body>
