--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
 </head>
 <body>
   <div class="button-container">
-    <a href="https://mandic82.github.io/Bibliocolab/fundador.html target="_blank" class="btn"> Paulo Bourroul - Homenagem ao Fundador </a> 
-    <a href="ConheçaoProjeto.html" target="_blank" class="btn">🛠️ Conheça o projeto</a> 
+    <a href="https://mandic82.github.io/Bibliocolab/homenagem.html" target="_blank" class="btn"> Paulo Bourroul - Homenagem ao Fundador </a> 
+   
     <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUvYFF8wCk-Ag-mEkCu5pNaikK3ltHAuFx_-eguoaKgy2IRSwwL6wGze8ZOdMs_Q-14wSIRDUFvsRy/pubhtml?gid=0&single=true" target="_blank" class="btn">📚 Consulte o Acervo da Biblioteca </a>
+<br>
+    <a href="ConheçaoProjeto.html" target="_blank" class="btn">🛠️ Conheça o projeto</a> 
   </div>
 </body>
 </html>
