--- a/homenagem.html
+++ b/homenagem.html
@@ -131,7 +131,7 @@
       Seu navegador não suporta áudio HTML5.
     </audio>
 
-    <img src=<img src="paulo-bourroul.jpeg" alt="Paulo Bourroul" class="portrait">
+    <img src="paulo-bourroul.jpeg" alt="Paulo Bourroul" class="portrait">
 
     <h2>Paulo Bourroul</h2>
     <p>
