--- a/homenagem.html
+++ b/homenagem.html
@@ -127,7 +127,7 @@
     <h1>📚 Homenagem ao Fundador</h1>
 
     <audio controls autoplay>
-      <source src="audio.mp4" type="audio/mp4">
+      <source src="narracao.mp3" type="audio/mp3">
       Seu navegador não suporta áudio HTML5.
     </audio>
 
