--- a/trabalheaqui.html
+++ b/trabalheaqui.html
@@ -132,11 +132,20 @@
 </div>
    
  <div class="section" style="--i:3">
-      <h2>Etapa 3: Selecione e Envie</h2>
+      <h2>Etapa 3: Selecione </h2>
       <label for="file-upload" class="btn">Selecionar Imagens</label>
       <input type="file" id="file-upload" multiple accept="image/*" style="display:none;">
       <p id="file-info"></p>
     </div>
+
+     <div class="section" style="--i:4">
+      <h2>Salve as imagens na Pasta do google Drive</h2>
+      <p>Clique na imagem abaixo para abrir a pasta de destino no Google Drive:</p>
+      <a href="https://drive.google.com/drive/folders/1YZvqh4FdZ9d0WK9e5N5plAiceq2UrOTh?usp=drive_link" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Folder-front-premium.png" alt="Pasta Drive" class="folder-img">
+      </a>
+    </div>
+    
     
     <div class="section">
       <h2> Etapa 4: Execute o Google Colab</h2>
@@ -145,7 +154,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Google_Colab_pic.png/1024px-Google_Colab_pic.png" alt="Google Colab" class="colab-img">
       </a>
     </div>
-
+ 
     <div class="section">
       <h2> Etapa 5: Veja os Resultados</h2>
       <p>Após a execução do Colab, os dados extraídos estarão organizados na planilha abaixo:</p>
