--- a/homenagem.html
+++ b/homenagem.html
@@ -125,7 +125,7 @@
 <body>
   <div class="container">
     
-    <h1>📚 Homenagem ao Fundador</h1>
+    <h1>Biblioteca Paulo Bourroul</h1>
 
     <audio controls autoplay>
       <source src="narracao.mp3" type="audio/mp3">
@@ -134,7 +134,7 @@
 
     <img src="paulo-bourroul.jpeg" alt="Paulo Bourroul" class="portrait">
 
-    <h2>Paulo Bourroul</h2>
+    <h2>Homenagem ao Fundador</h2>
     <p>
       A Biblioteca Paulo Bourroul é mais do que um acervo — é um legado. Fundada com o propósito de preservar o conhecimento, promover a cultura e inspirar gerações, ela carrega o nome de um homem cuja paixão pelos livros e pela educação transformou vidas.
     </p>
