--- a/homenagem.html
+++ b/homenagem.html
@@ -127,10 +127,10 @@
     
     <h1>Biblioteca Paulo Bourroul</h1>
 
-    <audio controls autoplay>
-      <source src="narracao.mp3" type="audio/mp3">
+    <!audio controls autoplay>
+      <!source src="narracao.mp3" type="audio/mp3">
       Seu navegador não suporta áudio HTML5.
-    </audio>
+    <!/audio>
 
     <img src="paulo-bourroul.jpeg" alt="Paulo Bourroul" class="portrait">
 
