--- a/homenagem.html
+++ b/homenagem.html
@@ -129,7 +129,7 @@
 
     <!audio controls autoplay>
       <!source src="narracao.mp3" type="audio/mp3">
-      Seu navegador não suporta áudio HTML5.
+      <!Seu navegador não suporta áudio HTML5.>
     <!/audio>
 
     <img src="paulo-bourroul.jpeg" alt="Paulo Bourroul" class="portrait">
